--- a/_includes/join-the-lab.html
+++ b/_includes/join-the-lab.html
@@ -1,20 +1,37 @@
 {% assign vacancies = site.data.vacancies %}
 {% assign vacancies = '' %}
 
-<h1 class="post-title">We are recruiting lab members</h1>
-{% if vacancies != '' %}
-  <h5 class="header">Please follow the links below to read more about the positions and find out how to apply.</h5>
-  <div class="vacancies">
-    {% for position in vacancies %}
-      <a href="{{ position.link }}" target="_blank">
-        <div class="position">
-          <div class="name">{{ position.name }}</div>
-          <div class="info">{{ position.fte }} at the {{ position.location }} &bull; deadline {{ position.deadline | date: "%B %d, %Y" }}, or until position is filled.</div>
-          <!-- <p>{{ position.description }}</p> -->
-        </div>
-      </a>
-    {% endfor %}
-  </div>
-{% else %}
-  <h5 class="header">We currently have no open positions. Please check back later.</h5>
-{% endif %}
+<div class="container" style="position: relative; display: inline-block;">
+  <img src="{{ base.url }}/assets/images/home/team/IMG_1575_mod.png" alt="Team_dark">
+  <h1 class="post-title overlay" style="top:10px;">We are recruiting lab members</h1>
+  {% if vacancies != '' %}
+    <h5 class="header">Please follow the links below to read more about the positions and find out how to apply.</h5>
+    <div class="vacancies">
+      {% for position in vacancies %}
+        <a href="{{ position.link }}" target="_blank">
+          <div class="position">
+            <div class="name">{{ position.name }}</div>
+            <div class="info">{{ position.fte }} at the {{ position.location }} &bull; deadline {{ position.deadline | date: "%B %d, %Y" }}, or until position is filled.</div>
+            <!-- <p>{{ position.description }}</p> -->
+          </div>
+        </a>
+      {% endfor %}
+    </div>
+  {% else %}
+    <h5 class="header overlay" style="top:80px;">We currently have no open positions. Please check back later.</h5>
+  {% endif %}
+</div>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .overlay {
+      position: absolute;
+      left: 10px;
+      margin: 0;
+      padding: 0;
+      background: rgba(255, 255, 255, 0); /* Optional: adds a background to the text for better readability */
+    }
+  </style>
+</head>
