compress team img

--- a/_includes/join-the-lab.html
+++ b/_includes/join-the-lab.html
@@ -2,7 +2,7 @@
 {% assign vacancies = '' %}
 
 <div class="container" style="position: relative; display: inline-block;">
-  <img src="{{ base.url }}/assets/images/home/team/IMG_1575_mod.png" alt="Team_dark">
+  <img src="{{ base.url }}/assets/images/home/team/team_dark.webp" alt="Team_dark">
   <h1 class="post-title overlay" style="top:10px;">We are recruiting lab members</h1>
   {% if vacancies != '' %}
     <h5 class="header">Please follow the links below to read more about the positions and find out how to apply.</h5>
