add funders in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,16 @@
       <div class="footer-col footer-col-3">
         <ul class="logo-block">
           <li class="logo">
+            <a href="https://www.mpg.de/de" title="MPG" target="_blank">
+              <img class="logo" src="{{ base.url }}/assets/images/logos/MPG-logo.png" alt="MPG Logo" title="MPG">
+            </a>
+          </li>
+          <li class="logo">
+            <a href="https://www.nwo.nl" title="NWO" target="_blank">
+              <img class="logo" src="{{ base.url }}/assets/images/logos/NWO_logo-RGB.png" alt="NWO Logo" title="NWO">
+            </a>
+          </li>
+          <li class="logo">
             <a href="https://www.mpi.nl/" title="MPI for Psycholinguistics" target="_blank">
               <img class="logo" src="{{ base.url }}/assets/images/logos/MPIfPL_logo_tag.png" alt="MPI Logo" title="MPI for Psycholinguistics">
             </a>
@@ -32,8 +42,8 @@
             </a>
           </li>
           <li class="logo">
-            <a href="https://www.ru.nl/" title="Radboud University" target="_blank">
-              <img class="logo" src="{{ base.url }}/assets/images/logos/ru_en_1.png" alt="RU Logo" title="Radboud University">
+            <a href="https://www.dcc.ru.nl/languageininteraction/" title="Language in Interaction" target="_blank">
+              <img class="logo" src="{{ base.url }}/assets/images/logos/language-in-interaction-logo.jpeg" alt="Language in Interaction" title="Language in Interaction">
             </a>
           </li>
         </ul>
