--- a/_includes/collage_bu.html
+++ b/_includes/collage_bu.html
@@ -7,40 +7,12 @@
   {% endif %}
 {% endfor %}
 
-{% assign alumni_empty_or_non_int = "" | split: "" %}
-{% assign alumni_not_empty = "" | split: "" %}
-
-{% for member in current-member %}
-  {% if member.alumni == "" or member.alumni == nil %}
-    {% assign alumni_empty_or_non_int = alumni_empty_or_non_int | push: member %}
-  {% else %}
-    {% assign is_number = true %}
-    {% for char in member.alumni %}
-      {% if char < '0' or char > '9' %}
-        {% assign is_number = false %}
-      {% endif %}
-    {% endfor %}
-    {% if is_number %}
-      {% assign alumni_not_empty = alumni_not_empty | push: member %}
-    {% else %}
-      {% assign alumni_empty_or_non_int = alumni_empty_or_non_int | push: member %}
-    {% endif %}
-  {% endif %}
-{% endfor %}
-
-{% assign alumni_not_empty = alumni_not_empty | sort: 'alumni' | reverse %}
-{% assign sorted_members = alumni_empty_or_non_int | concat: alumni_not_empty %}
-
-<ul>
-  {% for member in sorted_members %}
-    <li>{{ member.name }} - {{ member.alumni }}</li>
-  {% endfor %}
-</ul>
+{% assign current-member = current-member | sort: 'surname'  %}
 
 
 <div class="collage-container">
   <div class="collage-item">
-    {% for person in sorted_members limit:4 %}
+    {% for person in current-member limit:5 %}
       <a href="{{ site.baseurl }}#{{ person.bio_url }}">
       {% if person.alumni == nil %}
         <img src="{{ site.baseurl }}{{ person.image_path }}" title="{{ person.firstname }} {{ person.surname }}" alt="{{ person.firstname }} {{ person.surname}}" />
@@ -51,7 +23,7 @@
     {% endfor %}
   </div>
   <div class="collage-item">
-    {% for person in sorted_members limit:4 offset:4 %}
+    {% for person in current-member limit:4 offset:5 %}
       <a href="{{ site.baseurl }}#{{ person.bio_url }}">
       {% if person.alumni == nil %}
         <img src="{{ site.baseurl }}{{ person.image_path }}" title="{{ person.firstname }} {{ person.surname }}" alt="{{ person.firstname }} {{ person.surname}}" />
@@ -62,7 +34,7 @@
     {% endfor %}
   </div>
   <div class="collage-item">
-    {% for person in sorted_members limit:4 offset:8 %}
+    {% for person in current-member limit:5 offset:9 %}
       <a href="{{ site.baseurl }}#{{ person.bio_url }}">
       {% if person.alumni == nil %}
         <img src="{{ site.baseurl }}{{ person.image_path }}" title="{{ person.firstname }} {{ person.surname }}" alt="{{ person.firstname }} {{ person.surname}}" />
@@ -73,7 +45,7 @@
     {% endfor %}
   </div>
   <div class="collage-item">
-    {% for person in sorted_members limit:5 offset:13 %}
+    {% for person in current-member limit:5 offset:14 %}
       <a href="{{ site.baseurl }}#{{ person.bio_url }}">
       {% if person.alumni == nil %}
         <img src="{{ site.baseurl }}{{ person.image_path }}" title="{{ person.firstname }} {{ person.surname }}" alt="{{ person.firstname }} {{ person.surname}}" />
@@ -84,7 +56,7 @@
     {% endfor %}
   </div>
   <div class="collage-item">
-    {% for person in sorted_members limit:5 offset:18 %}
+    {% for person in current-member limit:5 offset:19 %}
       <a href="{{ site.baseurl }}#{{ person.bio_url }}">
       {% if person.alumni == nil %}
         <img src="{{ site.baseurl }}{{ person.image_path }}" title="{{ person.firstname }} {{ person.surname }}" alt="{{ person.firstname }} {{ person.surname}}" />
@@ -95,7 +67,7 @@
     {% endfor %}
   </div>
   <div class="collage-item">
-    {% for person in sorted_members limit:5 offset:23 %}
+    {% for person in current-member limit:5 offset:24 %}
       <a href="{{ site.baseurl }}#{{ person.bio_url }}">
       {% if person.alumni == nil %}
         <img src="{{ site.baseurl }}{{ person.image_path }}" title="{{ person.firstname }} {{ person.surname }}" alt="{{ person.firstname }} {{ person.surname}}" />
@@ -106,7 +78,7 @@
     {% endfor %}
   </div>
   <div class="collage-item">
-    {% for person in sorted_members limit:5 offset:28 %}
+    {% for person in current-member limit:5 offset:29 %}
       <a href="{{ site.baseurl }}#{{ person.bio_url }}">
       {% if person.alumni == nil %}
         <img src="{{ site.baseurl }}{{ person.image_path }}" title="{{ person.firstname }} {{ person.surname }}" alt="{{ person.firstname }} {{ person.surname}}" />
@@ -117,7 +89,7 @@
     {% endfor %}
   </div>
   <div class="collage-item">
-    {% for person in sorted_members limit:5 offset:33 %}
+    {% for person in current-member limit:5 offset:34 %}
       <a href="{{ site.baseurl }}#{{ person.bio_url }}">
       {% if person.alumni == nil %}
         <img src="{{ site.baseurl }}{{ person.image_path }}" title="{{ person.firstname }} {{ person.surname }}" alt="{{ person.firstname }} {{ person.surname}}" />
@@ -128,7 +100,7 @@
     {% endfor %}
   </div>
   <div class="collage-item">
-    {% for person in sorted_members limit:5 offset:38 %}
+    {% for person in current-member limit:4 offset:39 %}
       <a href="{{ site.baseurl }}#{{ person.bio_url }}">
       {% if person.alumni == nil %}
         <img src="{{ site.baseurl }}{{ person.image_path }}" title="{{ person.firstname }} {{ person.surname }}" alt="{{ person.firstname }} {{ person.surname}}" />
