promote people in donders

--- a/_includes/research.html
+++ b/_includes/research.html
@@ -49,7 +49,7 @@
 </p>
 <br>
 <p>
-  We create theoretical models and computational implementations. Then, neuroscientific experiments are designed to validate our models. One of our key foci is on the role of “rhythmic computation” as a mechanism for symbolic representations in brain-like systems. To read more about our research, check out our <a href="/posts">projects</a> and <a href="/publications">publication</a> pages
+  We create theoretical models and computational implementations. Then, neuroscientific experiments are designed to validate our models. One of our key foci is on the role of “rhythmic computation” as a mechanism for symbolic representations in brain-like systems. To read more about our research, check out this recent <a href="https://www.ru.nl/en/donders-institute/working-at/people-of-donders/andrea-martin">People of Donders</a> and our <a href="/posts">projects</a> and <a href="/publications">publication</a> pages.
 </p>
 
 <!-- Human language showcases our remarkable ability to understand and create expressions never encountered before, such as a 'blue and white striped whale'. Our brains flexibly navigate linguistic rules and statistical patterns, enabling us to generate meaningful language beyond familiar contexts. This unique capacity illustrates the complex interplay between the structured grammar and the dynamic, statistical nature of language processing in our neural systems.
