--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,9 +9,9 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>An independent research group at the Max Planck Institute for Psycholinguistics</li> <br>
-          <!-- {%- if site.email -%} -->
-          <!-- <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li> -->
-          <!-- {%- endif -%} -->
+          {%- if site.email -%}
+          <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          {%- endif -%}
         </ul>
       </div>
 
