--- a/_includes/participate.html
+++ b/_includes/participate.html
@@ -14,7 +14,7 @@ In our brain studies, we typically use a brain monitoring technique called magne
 </figure> 
  -->
 <h3 class="thin">Contact</h3>
-<p>To register your interest, the best way to reach us is to email us at <a href="mailto:lacns@mpi.nl">lacns@mpi.nl</a>. Please also state the following:</p>
+<p>To register your interest, the best way to reach us is to email us at <a href="mailto:lacns-contact@mpi.nl">lacns-contact@mpi.nl</a>. Please also state the following:</p>
 - your age,
 - whether you have any non-removable metal, such as permanent piercings, medical implants, and dental work such as braces/retainers,
 - whether you have any (history of) neurological disorders,
