--- a/_includes/join-the-lab.html
+++ b/_includes/join-the-lab.html
@@ -1,8 +1,9 @@
 {% assign vacancies = site.data.vacancies %}
 
 <div class="container" style="position: relative; display: inline-block;">
-  <h1 class="post-title">We are recruiting lab members</h1>
-  {% if vacancies != '' %}
+  <!-- <h1 class="post-title">We are recruiting lab members</h1> -->
+  <h1 class="post-title">We currently have no open positions</h1>
+  {% if vacancies == '' %}
     <h5 class="header">Please follow the links below to read more about the positions and find out how to apply.</h5>
     <div class="vacancies">
       {% for position in vacancies %}
@@ -10,14 +11,14 @@
           <div class="position">
             <div class="name">{{ position.name }}</div>
             <div class="info">{{ position.fte }} at the {{ position.location }} &bull; deadline {{ position.deadline | date: "%B %d, %Y" }}, or until position is filled.</div>
-            <!-- <p>{{ position.description }}</p> -->
+            <p>{{ position.description }}</p>
           </div>
         </a>
       {% endfor %}
-    <img src="{{ base.url }}/assets/images/home/team/team_dark.webp" alt="Team_dark">
     </div>
   {% else %}
-  <h5 class="header overlay" style="top:80px;">We currently have no open positions. Please check back later.</h5>
+    <img src="{{ base.url }}/assets/images/home/team/team_dark.webp" alt="Team_dark">
+    <h5 class="header overlay" style="top:80px;"></h5>
   {% endif %}
 </div>
 
