--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,11 @@
       <div class="footer-col footer-col-3">
         <ul class="logo-block">
           <li class="logo">
+            <a href="https://cordis.europa.eu/project/id/101170162" title="ERC" target="_blank">
+              <img class="logo" src="{{ base.url }}/assets/images/logos/ERC_logo.png" alt="ERC Logo" title="ERC">
+            </a>
+          </li>
+          <li class="logo">
             <a href="https://www.mpg.de/de" title="MPG" target="_blank">
               <img class="logo" src="{{ base.url }}/assets/images/logos/MPG-logo.png" alt="MPG Logo" title="MPG">
             </a>
