--- a/_includes/participate.html
+++ b/_includes/participate.html
@@ -1,5 +1,5 @@
 <h1 class="post-title">We are recruiting for our research studies</h1>
-<h5 class="header">We are always seeking native speakers of Dutch to participate in our studies. Currently in 2024, in addition to Dutch, we are running studies in Mandarin Chinese, French, and Turkish.</h5>
+<h5 class="header">We are always seeking native speakers of Dutch to participate in our studies. Currently, in addition to Dutch, we are running studies in Brazilian Portuguese, Mandarin Chinese, and Turkish.</h5>
 
 <div class="image-gallery">
   <img src="{{ base.url }}/assets/images/participate/comprehension.webp" alt="Blue whale">
